--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -10,6 +10,14 @@ h3 {
   filter: drop-shadow(0px 0px 5px #f6f0e4);
 }
 
+a {
+  /* grows all links on hover */
+  transition: all 0.2s ease-in-out;
+}
+a:hover {
+  transform: scale(1.1);
+}
+
 .image-container {
   display: flex;
   justify-content: center;
