--- a/src/Pages/ComingSoon/style.css
+++ b/src/Pages/ComingSoon/style.css
@@ -1,4 +1,6 @@
 .comingSoon {
+  background-color: #e9dbd7;
+  font-family: "Spartan", san-serif;
   height: 100vh;
   width: 100vw;
   padding: 300px;
