--- a/src/Pages/Services/style.css
+++ b/src/Pages/Services/style.css
@@ -4,7 +4,7 @@
   color: black;
 }
 
-h1,
+/* h1,
 h2,
 h3 {
   filter: drop-shadow(0px 0px 5px #f6f0e4);
@@ -15,4 +15,4 @@ h3 {
   justify-content: center;
   align-items: center;
   filter: drop-shadow(5px 5px 15px #b5b5ad);
-}
+} */
