--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+.pageView {
+  background-color: #e9dbd7;
+  font-family: "Spartan", san-serif;
+  color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1,
+h2,
+h3 {
+  filter: drop-shadow(0px 0px 5px #f6f0e4);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a {
+  /* grows all links on hover */
+  transition: all 0.2s ease-in-out;
+}
+a:hover {
+  transform: scale(1.1);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.image-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  filter: drop-shadow(5px 5px 15px #b5b5ad);
 }
 
-.App-link {
-  color: #61dafb;
+.section-container {
+  padding: 75px 0px;
+  margin-top: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+/* mobile screens */
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .section-container {
+    padding-bottom: 10px;
   }
 }
