--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 .pageView {
   background-color: #e9dbd7;
-  font-family: "Spartan", san-serif;
+  font-family: "Nunito", san-serif;
   color: black;
 }
 
