--- a/src/Components/Hero/style.css
+++ b/src/Components/Hero/style.css
@@ -1,4 +1,5 @@
 .hero {
+  /* TODO: update hero url if necessary */
   background-image: url("../../assets/images/hero.jpg");
   background-size: cover;
   width: 100%;
@@ -18,6 +19,14 @@
 }
 
 /* tablets */
+@media screen and (min-width: 320px) and (max-width: 920px) {
+  .hero {
+    /* TODO: update heroSm url if necessary */
+    background-image: url("../../assets/images/heroSm.jpg");
+    background-size: cover;
+  }
+}
+
 @media screen and (min-width: 425px) and (max-width: 767px) {
   .logoOverlay {
     padding-top: 10%;
