--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,17 @@
 /* Color Story */
 
-span.anchor {
-  margin-top: -76px; /* height of nav */
-  display: block;
-  height: 76px; /* height of nav */
-  visibility: hidden;
-  position: relative;
+/* TODO: Update all fields with client branding */
+h1,
+h2,
+h3,
+h4 {
+  filter: drop-shadow(0px 0px 5px #f6f0e4);
 }
 
 .pageView {
   background-color: #e9dbd7;
   font-family: "Nunito", san-serif;
   color: black;
-}
-
-h1,
-h2,
-h3 {
-  filter: drop-shadow(0px 0px 5px #f6f0e4);
-}
-
-a {
-  /* grows all links on hover */
-  transition: all 0.2s ease-in-out;
-}
-a:hover {
-  transform: scale(1.1);
 }
 
 .image-container {
@@ -37,6 +23,22 @@ a:hover {
 
 .section-container {
   margin-top: 40px;
+}
+
+span.anchor {
+  margin-top: -76px; /* height of nav */
+  display: block;
+  height: 76px; /* height of nav */
+  visibility: hidden;
+  position: relative;
+}
+
+a {
+  /* grows all links on hover */
+  transition: all 0.2s ease-in-out;
+}
+a:hover {
+  transform: scale(1.1);
 }
 
 /* mobile screens */
