--- a/src/Pages/NotFound/style.css
+++ b/src/Pages/NotFound/style.css
@@ -1,13 +1,10 @@
 .notFound {
-  background-color: #e9dbd7;
-  font-family: "Spartan", san-serif;
-  padding-top: 25%;
+  padding-top: 15%;
   height: 100vh;
   width: 100vw;
 }
-/* 
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .notFound {
-    padding-top: 25%;
-  }
-} */
+.imageCenter {
+  display: flex-row;
+  justify-content: center;
+  align-items: center;
+}
