--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@ h4 {
   font-family: "Nunito", san-serif;
   color: black;
 }
+.title-text {
+  filter: drop-shadow(0px 0px 5px #f6f0e4);
+  display: flex;
+  justify-content: center;
+  font-size: 400%;
+}
 
 .image-container {
   display: flex;
@@ -51,5 +57,8 @@ a:hover {
   }
   a:hover {
     transform: unset;
+  }
+  .title-text {
+    font-size: 300%;
   }
 }
