--- a/src/App.css
+++ b/src/App.css
@@ -5,60 +5,60 @@ h1,
 h2,
 h3,
 h4 {
-  filter: drop-shadow(0px 0px 5px #f6f0e4);
+	filter: drop-shadow(0px 0px 5px #f7b56a);
 }
 
 .pageView {
-  background-color: #e9dbd7;
-  font-family: "Nunito", san-serif;
-  color: black;
+	background-color: #e4c99f;
+	font-family: 'Nunito', san-serif;
+	color: black;
 }
 .title-text {
-  filter: drop-shadow(0px 0px 5px #f6f0e4);
-  display: flex;
-  justify-content: center;
-  font-size: 400%;
+	filter: drop-shadow(0px 0px 5px #f7b56a);
+	display: flex;
+	justify-content: center;
+	font-size: 400%;
 }
 
 .image-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  filter: drop-shadow(5px 5px 15px #b5b5ad);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	filter: drop-shadow(5px 5px 15px #f7b56a);
 }
 
 .section-container {
-  margin-top: 40px;
+	margin-top: 40px;
 }
 
 span.anchor {
-  margin-top: -76px; /* height of nav */
-  display: block;
-  height: 76px; /* height of nav */
-  visibility: hidden;
-  position: relative;
+	margin-top: -76px; /* height of nav */
+	display: block;
+	height: 76px; /* height of nav */
+	visibility: hidden;
+	position: relative;
 }
 
 a {
-  /* grows all links on hover */
-  transition: all 0.2s ease-in-out;
+	/* grows all links on hover */
+	transition: all 0.2s ease-in-out;
 }
 a:hover {
-  transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 /* mobile screens */
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .section-container {
-    padding-bottom: 10px;
-  }
-  a {
-    transition: unset;
-  }
-  a:hover {
-    transform: unset;
-  }
-  .title-text {
-    font-size: 300%;
-  }
+	.section-container {
+		padding-bottom: 10px;
+	}
+	a {
+		transition: unset;
+	}
+	a:hover {
+		transform: unset;
+	}
+	.title-text {
+		font-size: 300%;
+	}
 }
