--- a/src/Sections/Footer/style.css
+++ b/src/Sections/Footer/style.css
@@ -17,7 +17,7 @@
 	color: #b2a2b9;
 	text-decoration: underline;
 	/* TODO: uncomment below to add easter egg pointer (max dimensions 32x32px) */
-	/* cursor: url(../../assets/images/egg.png), pointer; */
+	cursor: url(../../assets/images/egg.png), pointer;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
